--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.tulatacc"
+    package="co.tula.tacc"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -8,7 +8,32 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
     
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission
+        android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission
+        android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission
+        android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission
+        android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission
+        android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission
+        android:name="android.permission.READ_CONTACTS" />
+    <uses-permission
+        android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission
+        android:name="android.permission.READ_SYNC_STATS" />
+    <uses-permission
+        android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission
+        android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission
+        android:name="android.permission.READ_SOCIAL_STREAM" />
+    <uses-permission
+        android:name="android.permission.WRITE_SOCIAL_STREAM" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +41,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="co.tulatacc.LoginActivity"
+            android:name="co.tula.tacc.LoginActivity"
             android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,35 +49,35 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="co.tulatacc.AddRecordActivity"
+            android:name="co.tula.tacc.AddRecordActivity"
             android:label="@string/title_activity_add_record" >
         </activity>
         <activity
-            android:name="co.tulatacc.AddTrackingItemActivity"
+            android:name="co.tula.tacc.AddTrackingItemActivity"
             android:label="@string/title_activity_add_tracking_item" >
         </activity>
         <activity
-            android:name="co.tulatacc.FiltersActivity"
+            android:name="co.tula.tacc.FiltersActivity"
             android:label="@string/title_activity_filters" >
         </activity>
         <activity
-            android:name="co.tulatacc.PushTimesheetActivity"
+            android:name="co.tula.tacc.PushTimesheetActivity"
             android:label="@string/title_activity_push_timesheet" >
         </activity>
         <activity
-            android:name="co.tulatacc.InTimeActivity"
+            android:name="co.tula.tacc.InTimeActivity"
             android:label="@string/title_activity_in_time" >
         </activity>
         <activity
-            android:name="co.tulatacc.ItemsListActivity"
+            android:name="co.tula.tacc.ItemsListActivity"
             android:label="@string/title_activity_items_list" >
         </activity>
         <activity
-            android:name="co.tulatacc.RecordListActivity"
+            android:name="co.tula.tacc.RecordListActivity"
             android:label="@string/title_activity_record_list" >
         </activity>
         <activity
-            android:name="co.tulatacc.SelectToTrackActivity"
+            android:name="co.tula.tacc.SelectToTrackActivity"
             android:label="@string/title_activity_select_to_track" >
         </activity>
     </application>
